# MPI-Kalari

./: .gitignore  README
1DToyFD/: CMakeLists.txt
1DToyFD/app/: 1DFDToy.cpp  CMakeLists.txt
1DToyFD/include/: definitions.h
1DToyFD/src/: 1DFDToy.cpp  MPIUtils.cpp  allocateMemory.cpp  deAllocateMemory.cpp  initialize.cpp
